--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -27,7 +27,7 @@
         <h:form id="form">
             <div class="xyr_in">
                 <div class="x_in">
-                    <strong class="chooseX">Choose X:  </strong><h:outputText id="xValue" value="#{Check.x}"/>
+                    <strong class="chooseX">Choose X:  </strong><h:outputLabel class="xValue" id="xValue" value="#{Check.x}"/>
                     <ace:sliderEntry id="slider_x" value="#{Check.x}" min="-2" max="2" stepPercent="25">
                         <ace:ajax render="xValue" event="slideEnd" execute="@this"/>
                     </ace:sliderEntry>
@@ -36,25 +36,29 @@
                 <div class="textY">
                     <label>
                         <strong>Enter Y in [-3;3]:</strong>
+<!--                        <h:outputLabel class="yValue" id="Y" value="#{Check.y}"/>-->
                         <span class="exceptionY"></span>
 <!--                        <h:message  id="exceptionY" for="y_in"/>-->
                         <h:inputText id="y_in" value="#{Check.y}" maxlength="25">
                             <f:validateDoubleRange minimum="-3.0" maximum="3.0" />
 <!--                            <ace:ajax execute="y_in" render="exceptionY"/>-->
                         </h:inputText>
+
                     </label>
                 </div>
 
                 <div class="radioR">
                     <label>
                         <strong>Choose R:</strong>
-                        <h:selectOneRadio value="#{Check.r}" name="r" id="r_in" shape="circle">
+<!--                        <h:outputLabel class="rValue" id="R" value="#{Check.r}"/>-->
+                        <h:selectOneRadio value="#{Check.r}" id="r_in" shape="circle">
                             <f:selectItem styleClass="radioItem" itemValue = "1" itemLabel = "1" />
                             <f:selectItem styleClass="radioItem" itemValue = "1.5" itemLabel = "1.5" />
                             <f:selectItem styleClass="radioItem" itemValue = "2" itemLabel = "2" />
                             <f:selectItem styleClass="radioItem" itemValue = "2.5" itemLabel = "2.5" />
                             <f:selectItem styleClass="radioItem" itemValue = "3" itemLabel = "3" />
                         </h:selectOneRadio>
+
                     </label>
                 </div>
 
@@ -73,7 +77,7 @@
                 </h:outputScript>
             </ui:repeat>
 
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="400" height="400" class="graph">
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="400" height="400" id="graph" class="graph">
                 <line class="axes" x1="0" x2="400" y1="200" y2="200" stroke="black"></line>
                 <line x1="200" x2="200" y1="0" y2="400" stroke="black"></line>
                 <polygon points="200,0 194,25 206,25" stroke="black"></polygon>
